--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "picocom-1.7.tar.gz:"	bde6e36af71db845913f9d61f28dee1b485218fa
+  "picocom-2.2.tar.gz":   db13433be036833d686241e2b3b5412d7776b7c9
